# OrbbecSDK_CSharp

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
obsdk/include/libobsensor/h/: Context.h  Device.h  ObTypes.h  Property.h
obsdk/include/libobsensor/hpp/: Context.hpp
obsdk/lib/: OrbbecSDK.lib
samples/: CMakeLists.txt  HelloOrbbec.cs  NetDevicePipeline.cs  PipelineSample.cs  PipelineSample_Wait.cs
samples/0.basic.quick_start/: CMakeLists.txt  Program.cs  Window.xaml  Window.xaml.cs
samples/1.stream.color/: CMakeLists.txt  Program.cs  Window.xaml  Window.xaml.cs
samples/1.stream.depth/: CMakeLists.txt  Program.cs  Window.xaml  Window.xaml.cs
samples/1.stream.imu/: CMakeLists.txt  Program.cs  Window.xaml  Window.xaml.cs
samples/1.stream.infrared/: CMakeLists.txt  Program.cs  Window.xaml  Window.xaml.cs
samples/1.stream.multi_streams/: CMakeLists.txt  Window.xaml  Window.xaml.cs
samples/2.device.control/: CMakeLists.txt  Program.cs  Window.xaml  Window.xaml.cs
samples/2.device.firmware_update/: CMakeLists.txt  Program.cs  Window.xaml  Window.xaml.cs
samples/2.device.hot_plugin/: CMakeLists.txt  Program.cs  Window.xaml  Window.xaml.cs
samples/3.advanced.coordinate_transform/: CMakeLists.txt  Program.cs
samples/3.advanced.hdr/: CMakeLists.txt  Program.cs  Window.xaml  Window.xaml.cs
samples/3.advanced.hw_d2c_align/: CMakeLists.txt  Program.cs  Window.xaml  Window.xaml.cs
samples/3.advanced.multi_devices/: CMakeLists.txt  Program.cs  Window.xaml  Window.xaml.cs
samples/3.advanced.point_cloud/: CMakeLists.txt  Program.cs  Window.xaml  Window.xaml.cs
samples/3.advanced.post_processing/: CMakeLists.txt  Program.cs  Window.xaml  Window.xaml.cs
samples/HelloOrbbec/: CMakeLists.txt  HelloOrbbec.cs
samples/MultiStream/: CMakeLists.txt  Window.xaml.cs
samples/PipelineSample/: CMakeLists.txt  PipelineSample.cs  PipelineSample_Wait.cs
samples/PostProcessing/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  PostProcessing.csproj
samples/PostProcessing/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
samples/SyncAlign/: CMakeLists.txt  Window.xaml.cs
scripts/: Build.ps1
src/: CameraParamList.cs  Config.cs  Context.cs  CoordinateTransformHelper.cs  DepthWorkModeList.cs  Device.cs  DeviceInfo.cs  DeviceList.cs  Error.cs  Filter.cs  FilterConfigSchemaList.cs  FilterList.cs  Frame.cs  NativeHandle.cs  Pipeline.cs  Playback.cs  PresetList.cs  Property.cs  RecommendedFilterList.cs  Recorder.cs  Sensor.cs  SensorList.cs  StreamProfile.cs  StreamProfileList.cs  TypeHelper.cs  Types.cs  Version.cs  obNative.cs
tests/: CMakeLists.txt  Context_Test.cs  Device_Test.cs  Pipeline_Test.cs  Sensor_Test.cs
