add_subdirectory(0.basic.quick_start)
add_subdirectory(0.basic.quick_start.1)
add_subdirectory(1.stream.color)
add_subdirectory(1.stream.depth)
add_subdirectory(1.stream.imu)
add_subdirectory(1.stream.infrared)
add_subdirectory(1.stream.multi_streams)
add_subdirectory(2.device.control)
add_subdirectory(2.device.firmware_update)
add_subdirectory(2.device.hot_plugin)
add_subdirectory(3.advanced.coordinate_transform)
add_subdirectory(3.advanced.hdr)
add_subdirectory(3.advanced.hw_d2c_align)
add_subdirectory(3.advanced.multi_devices)
add_subdirectory(3.advanced.point_cloud)
add_subdirectory(3.advanced.post_processing)
add_subdirectory(HelloOrbbec)
add_subdirectory(SyncAlign)